# llm_proxy

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.llama  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: llama.dockerfile
requirements/: dev.txt  llama.txt  main.txt
src/: main.py
src/config/: __init__.py  core.py  cors.py  database.py  public_api.py
src/infrastructure/application/: __init__.py  factory.py
src/infrastructure/application/entities/: __init__.py  base.py  response.py
src/infrastructure/llm/: service.py
src/rest/: __init__.py
src/rest/code_assistance/: contracts.py  rest.py
src/rest/finances/: __init__.py  contracts.py  rest.py
src/rest/health_check/: __init__.py  rest.py
src/rest/research/: contracts.py  rest.py
