# ************************************************
# ********** Project Metadata **********
# ************************************************
[project]
name = "llmproxy"
version = "0.1.0"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.6.0",
  "fastapi==0.115.0",
  "gunicorn==23.0.0",
  "h11==0.14.0",
  "idna==3.10",
  "packaging==24.1",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "pydantic-core==2.23.4",
  "python-dotenv==1.0.1",
  "sniffio==1.3.1",
  "starlette==0.38.6",
  "tomli==2.0.1",
  "typing_extensions==4.12.2",
  "uvicorn==0.31.0"
]

[tool.dev-dependencies]
dev-dependencies = [
  "black==24.8.0",
  "flake8==7.1.1",
  "isort==5.13.2",
  "mccabe==0.7.0",
  "mypy==1.11.2",
  "mypy-extensions==1.0.0",
  "pytest==8.3.3"
]


[tool.black]
target-version = ['py312']
line-length = 79
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 79
skip = 'venv,'
src_paths = ["."]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
namespace_packages = true
exclude = ["venv"]
plugins = ["pydantic.mypy"]